fixed bugs modal

--- a/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa01/epa01-4/epa01-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa01/epa01-4/epa01-4.component.html
@@ -113,7 +113,7 @@
 </div>
 
 <!-- Modal Show -->
-<div class="ui modal" id="ModalCheck" style="width: 90%;">
+<div class="ui modal" id="ModalShow" style="width: 90%;">
 
   <div class="header" style="background: #1e83db;color: white">
     การตรวจปล่อยสินค้า
