--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
@@ -3,24 +3,30 @@
         <h2 class="ui header">สร้างกระดาษทำการ</h2>
         <div class="ui segment">
             <div class="ui grid">
-                <div class="seven wide column">
+                <div class="sixteen wide column">
 
                     <div class="ui list">
                         <div class="item">
                             <i class="folder icon"></i>
                             <div class="content">
-                                <div class="header">ประเภทกระดาษทำการ</div>
+                                <div class="header">ประเภทกระดาษทำการตรวจสอบภาษี</div>
                                 <div class="list">
                                     <div class="item">
                                         <i class="folder icon"></i>
                                         <div class="content">
-                                            <div class="header">สินค้า</div>
+
+                                            <div class="header">
+                                                กระดาษทำการรับ-จ่ายวัตถุดิบ
+                                                <!-- <a href="javascript:;" (click)="clickMenuMat()">กระดาษทำการรับ-จ่ายวัตถุดิบ</a> -->
+                                            </div>
                                             <div class="list">
                                                 <div class="item hand-click">
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" (click)="clickMenuMat()">กระดาษทำการรับ-จ่ายวัตถุดิบ</a>
+                                                            <a href="javascript:;" routerLink="/ope04/1">
+                                                                กระดาษทำการรับวัตถุดิบ </a>
+                                                            <!-- <a href="javascript:;" (click)="clickMenuMat()">กระดาษทำการรับ-จ่ายวัตถุดิบ</a> -->
                                                         </div>
                                                     </div>
                                                 </div>
@@ -30,8 +36,8 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" routerLink="/ope04/4/1">กระดาษทำการหาความสัมพันธ์
-                                                                <br>การเบิกใช้วัตถุดิบกับการรับสินค้าสำเร็จรูป</a>
+                                                            <a href="javascript:;" routerLink="/ope04/2">
+                                                                กระดาษทำการจ่ายวัตถุดิบ </a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -41,47 +47,8 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" (click)="clickMenuIns()">กระดาษทำการรับ-จ่ายสินค้าสำเร็จรูป</a>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="list">
-                                                <div class="item hand-click">
-                                                    <i class="file text outline icon"></i>
-                                                    <div class="content">
-                                                        <div class="header">
-                                                            <a href="javascript:;" (click)="clickMenuTax()">กระดาษทำการตรวจสอบการลดหย่อนภาษี</a>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="list">
-                                                <div class="item hand-click">
-                                                    <i class="file text outline icon"></i>
-                                                    <div class="content">
-                                                        <div class="header">
-                                                            <a href="javascript:;" routerLink="/ope04/8">กระดาษทำการตรวจสอบด้านราคา</a>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="list">
-                                                <div class="item hand-click">
-                                                    <i class="file text outline icon"></i>
-                                                    <div class="content">
-                                                        <div class="header">
-                                                            <a href="javascript:;" routerLink="/ope04/9">กระดาษทำการจ่ายสินค้าสำเร็จรูปต่างประเทศ</a>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="list">
-                                                <div class="item hand-click">
-                                                    <i class="file text outline icon"></i>
-                                                    <div class="content">
-                                                        <div class="header">
-                                                            <a href="javascript:;" routerLink="/ope04/10">ตารางการคำนวณภาษีที่ต้องชำระเพิ่ม</a>
+                                                            <a href="javascript:;" routerLink="/ope04/3">
+                                                                กระดาษทำการตรวจนับวัตถุดิบคงเหลือ </a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -90,6 +57,94 @@
                                     </div>
                                 </div>
                                 <div class="list">
+                                    <div class="item">
+                                        <i class="folder icon"></i>
+                                        <div class="content">
+                                            <div class="header">
+                                                <a href="javascript:;" routerLink="/ope04/4/1">กระดาษทำการหาความสัมพันธ์การเบิกใช้วัตถุดิบกับการรับสินค้าสำเร็จรูป</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="list">
+                                    <div class="item">
+                                        <i class="folder icon"></i>
+                                        <div class="content">
+
+                                            <div class="header">
+                                                กระดาษทำการรับ-จ่ายสินค้าสำเร็จรูป
+                                            </div>
+                                            <div class="list">
+                                                <div class="item hand-click">
+                                                    <i class="file text outline icon"></i>
+                                                    <div class="content">
+                                                        <div class="header">
+                                                            <a href="javascript:;" routerLink="/ope04/4">
+                                                                กระดาษทำการรับสินค้าสำเร็จรูป </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="list">
+                                                <div class="item hand-click">
+                                                    <i class="file text outline icon"></i>
+                                                    <div class="content">
+                                                        <div class="header">
+                                                            <a href="javascript:;" routerLink="/ope04/5">
+                                                                กระดาษทำการจ่ายสินค้าสำเร็จรูป </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="list">
+                                    <div class="item">
+                                        <i class="folder icon"></i>
+                                        <div class="content">
+
+                                            <div class="header">
+                                                กระดาษทำการตรวจสอบการลดหย่อนภาษี
+
+                                            </div>
+                                            <div class="list">
+                                                <div class="item hand-click">
+                                                    <i class="file text outline icon"></i>
+                                                    <div class="content">
+                                                        <div class="header">
+                                                            <a href="javascript:;" routerLink="/ope04/6">
+                                                                กระดาษทำการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต
+                                                                (ภส.05 - 02) </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="list">
+                                                <div class="item hand-click">
+                                                    <i class="file text outline icon"></i>
+                                                    <div class="content">
+                                                        <div class="header">
+                                                            <a routerLink="/ope04/6-2" href="javascript:;">ผลการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต
+                                                                (ภส.05 - 02)</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="list">
+                                    <div class="item">
+                                        <i class="folder icon"></i>
+                                        <div class="content">
+                                            <div class="header">
+                                                <a href="javascript:;" routerLink="/ope04/8">กระดาษทำการตรวจสอบด้านราคา</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- <div class="list">
                                     <div class="item">
                                         <i class="folder icon"></i>
                                         <div class="content">
@@ -184,7 +239,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
 
@@ -272,11 +327,12 @@
                                     <a href="javascript:;" routerLink="/ope04/6">
                                         กระดาษทำการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 -
                                         02) </a>
-                                </td>                                
+                                </td>
                             </tr>
                             <tr>
                                 <td>2</td>
-                                <td><a routerLink="/ope04/6-2" href="javascript:;">ผลการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02)</a> </td>
+                                <td><a routerLink="/ope04/6-2" href="javascript:;">ผลการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต
+                                        (ภส.05 - 02)</a> </td>
                             </tr>
                             <!-- <tr>
                                 <td>
