--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-2/ope04-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-2/ope04-2.component.html
@@ -1,9 +1,10 @@
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <div class="ui grid">
     <div class="sixteen wide column">
         <h2 class="ui header">สร้างกระดาษทำการจ่ายวัตถุดิบ</h2>
 
         <div class="ui top attached header segment" style="background: #1e83db;color: white">
-            <span>เงื่อนไขการค้นหา</span>
+            <span>ระบุรายละเอียดกระดาษทำการ</span>
         </div>
         <div class="ui attached segment">
             <form ngNativeValidate (submit)="onClickShow($event)" class="ui form">
