--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-3/ope04-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-3/ope04-3.component.html
@@ -3,8 +3,8 @@
     <div class="sixteen wide column">
         <h2 class="ui header">สร้างกระดาษทำการตรวจนับวัตถุดิบคงเหลือ</h2>
 
-        <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-            <span>เงื่อนไขการค้นหา</span>
+        <div class="ui top attached header segment" style="background: #1e83db;color: white">
+            <span>ระบุรายละเอียดกระดาษทำการ</span>
         </div>
         <div class="ui attached segment">
             <form ngNativeValidate (submit)="onClickShow($event)" class="ui form">
