--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-4/ope04-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-4/ope04-4.component.html
@@ -1,9 +1,10 @@
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <div class="ui grid">
   <div class="sixteen wide column">
       <h2 class="ui header">กระดาษทำการรับสินค้าสำเร็จรูป</h2>
 
-      <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-          <span>Criteria</span>
+      <div class="ui top attached header segment" style="background: #1e83db;color: white">
+          <span>ระบุรายละเอียดกระดาษทำการ</span>
       </div>
       <form ngNativeValidate (submit)="onClickShow($event)">
         <div class="ui attached segment">
@@ -127,7 +128,7 @@
           </div>
       </div>
 
-      <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+      <div class="ui top attached header segment" style="background: #1e83db;color: white">
           <span>อัพโหลด Template ข้อมูลสำหรับการรับวัตถุดิบ</span>
       </div>
 
