--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-1/ope04-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-1/ope04-1.component.html
@@ -4,7 +4,7 @@
         <h2 class="ui header">สร้างกระดาษทำการรับวัตถุดิบ</h2>
 
         <div class="ui top attached header segment" style="background: #1e83db;color: white">
-            <span>เงื่อนไขการค้นหา</span>
+            <span>ระบุรายละเอียดกระดาษทำการ</span>
         </div>
         <div class="ui attached segment">
             <form ngNativeValidate (submit)="onClickShow($event)" class="ui form">
