--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-5/ope04-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-5/ope04-5.component.html
@@ -1,169 +1,178 @@
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <div class="ui grid">
-  <div class="sixteen wide column">
-      <h2 class="ui header">กระดาษทำการจ่ายสินค้าสำเร็จรูป </h2>
+    <div class="sixteen wide column">
+        <h2 class="ui header">กระดาษทำการจ่ายสินค้าสำเร็จรูป </h2>
 
-      <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-          <span>Criteria</span>
-      </div>
+        <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+            <span>Criteria</span>
+        </div>
 
-      <form ngNativeValidate (submit)="onClickShow($event)">
-          <div class="ui attached segment">
-              <div class="ui form">
-                  <div class="inline fields">
-                      <div class="eight wide field ">
-                          <label class="custom-label-w-25">ทะเบียนสรรพสามิต</label>
-                          <select class="ui search dropdown ope04-1" name="exciseId" id="exciseId" (change)="changeExiseId()" style="width: 100% !important">
-                        <option *ngFor="let list of exciseIdArr">{{list}}</option>
-                    </select>
-                      </div>
-                      <div class="eight wide field ">
-                          <label class="custom-label-w-20">เลขประจำตัวผู้เสียภาษี</label>
-                          <input type="text" name="taxNumber" id="taxNumber" class="custom-readonly" placeholder="เลขประจำตัวผู้เสียภาษี" readonly="" value="-">
-                      </div>
-                  </div>
+        <form ngNativeValidate (submit)="onClickShow($event)">
+            <div class="ui attached segment">
+                <div class="ui form">
+                    <div class="inline fields">
+                        <div class="eight wide field ">
+                            <label class="custom-label-w-25">ทะเบียนสรรพสามิต</label>
+                            <select class="ui search dropdown ope04-1" name="exciseId" id="exciseId" (change)="changeExiseId()"
+                                style="width: 100% !important">
+                                <option *ngFor="let list of exciseIdArr">{{list}}</option>
+                            </select>
+                        </div>
+                        <div class="eight wide field ">
+                            <label class="custom-label-w-20">เลขประจำตัวผู้เสียภาษี</label>
+                            <input type="text" name="taxNumber" id="taxNumber" class="custom-readonly" placeholder="เลขประจำตัวผู้เสียภาษี"
+                                readonly="" value="-">
+                        </div>
+                    </div>
 
-                  <div class="inline fields">
-                      <div class="eight wide field">
-                          <label class="custom-label-w-25">ผู้ประกอบการ </label>
-                          <input type="text" class="custom-readonly" placeholder="ผู้ประกอบการ" [(ngModel)]="obj.companyName" name="companyName" id="companyName" readonly="">
-                      </div>
-                      <div class="eight wide field ">
-                          <label class="custom-label-w-20">เลขที่วิเคราะห์</label>
-                          <input type="text" class="custom-readonly" placeholder="เลขที่วิเคราะห์" [(ngModel)]="obj.analysNumber" name="analysNumber" id="analysNumber" readonly="">
-                      </div>
-                  </div>
+                    <div class="inline fields">
+                        <div class="eight wide field">
+                            <label class="custom-label-w-25">ผู้ประกอบการ </label>
+                            <input type="text" class="custom-readonly" placeholder="ผู้ประกอบการ" [(ngModel)]="obj.companyName"
+                                name="companyName" id="companyName" readonly="">
+                        </div>
+                        <div class="eight wide field ">
+                            <label class="custom-label-w-20">เลขที่วิเคราะห์</label>
+                            <input type="text" class="custom-readonly" placeholder="เลขที่วิเคราะห์" [(ngModel)]="obj.analysNumber"
+                                name="analysNumber" id="analysNumber" readonly="">
+                        </div>
+                    </div>
 
-                  <div class="inline fields">
-                      <div class="eight wide field">
-                          <label class="custom-label-w-25">ประเภท </label>
-                          <input type="text" class="custom-readonly" placeholder="ประเภท" readonly="" value="-">
-                      </div>
-                      <div class="eight wide field ">
-                          <label class="custom-label-w-20">พิกัด</label>
-                          <input type="text" class="custom-readonly" placeholder="พิกัด" [(ngModel)]="obj.productType" name="productType" id="productType" readonly="">
-                      </div>
-                  </div>
+                    <div class="inline fields">
+                        <div class="eight wide field">
+                            <label class="custom-label-w-25">ประเภท </label>
+                            <input type="text" class="custom-readonly" placeholder="ประเภท" readonly="" value="-">
+                        </div>
+                        <div class="eight wide field ">
+                            <label class="custom-label-w-20">พิกัด</label>
+                            <input type="text" class="custom-readonly" placeholder="พิกัด" [(ngModel)]="obj.productType"
+                                name="productType" id="productType" readonly="">
+                        </div>
+                    </div>
 
-                  <div class="inline fields">
-                      <div class="three wide field">
-                          <label class="custom-label-w-25">รอบระยะเวลาการตรวจสอบ</label>
-                      </div>
-                      <div class="four wide field">
-                          <div class="ui calendar" id="calendarFront" style="width:100%">
-                              <div class="ui input left icon">
-                                  <i class="calendar alter nate outline icon"></i>
-                                  <input type="text" name="startDate" id="startDate" [(ngModel)]="obj.startDate" autocomplete="off" placeholder="ดด/ปปปป" [attr.required]="true">
-                              </div>
-                          </div>
-                      </div>
-                      <div class="four wide field">
-                          <label>-</label>
-                          <div class="ui calendar" id="calendarLast" style="width:100%">
-                              <div class="ui input left icon">
-                                  <i class="calendar alter nate outline icon"></i>
-                                  <input type="text" name="endDate" id="endDate" autocomplete="off" [(ngModel)]="obj.endDate" [attr.readonly]="null" placeholder="ดด/ปปปป" [attr.required]="true">
-                              </div>
-                          </div>
-                      </div>
-                  </div>
+                    <div class="inline fields">
+                        <div class="three wide field">
+                            <label class="custom-label-w-25">รอบระยะเวลาการตรวจสอบ</label>
+                        </div>
+                        <div class="four wide field">
+                            <div class="ui calendar" id="calendarFront" style="width:100%">
+                                <div class="ui input left icon">
+                                    <i class="calendar alter nate outline icon"></i>
+                                    <input type="text" name="startDate" id="startDate" [(ngModel)]="obj.startDate"
+                                        autocomplete="off" placeholder="ดด/ปปปป" [attr.required]="true">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="four wide field">
+                            <label>-</label>
+                            <div class="ui calendar" id="calendarLast" style="width:100%">
+                                <div class="ui input left icon">
+                                    <i class="calendar alter nate outline icon"></i>
+                                    <input type="text" name="endDate" id="endDate" autocomplete="off" [(ngModel)]="obj.endDate"
+                                        [attr.readonly]="null" placeholder="ดด/ปปปป" [attr.required]="true">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-                  <br>
-                  <div class="ui center aligned grid">
-                      <div class="six wide column">
-                          <button class="ui mini primary button" type="submit">
-              <i class="file icon"></i>
-              แสดงกระดาษทำการ
-            </button>
-                          <button class="ui mini button" type="reset">
-              <i class="close icon"></i>
-              ยกเลิก
-            </button>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </form>
+                    <br>
+                    <div class="ui center aligned grid">
+                        <div class="six wide column">
+                            <button class="ui mini primary button" type="submit">
+                                <i class="file icon"></i>
+                                แสดงกระดาษทำการ
+                            </button>
+                            <button class="ui mini button" type="reset">
+                                <i class="close icon"></i>
+                                ยกเลิก
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
 
-      <div class="ui segment" id="showData">
-          <div class="ui grid center aligned">
-              <div class="sixteen wide column">
-                  {{firstDataList.companyName}}
-                  <br> กระดาษทำการรับวัตถุดิบ
-                  <br> เดือน {{startDate}} - {{endDate}}
-              </div>
-          </div>
-          <br>
-          <div style="overflow-x: scroll;">
-              <table class="ui small celled table striped selectable" style="width: 120%;" id="showDt">
-                  <thead>
-                      <tr style="text-align: center;">
-                          <th>ลำดับที่</th>
-                          <th>รายการ</th>
-                          <th>ปริมาณจ่ายสิค้าสำเร็จรูปในใบกำกับภาษี			
-                          </th>
-                          <th></th>
-                          <th>ปริมาณจากงบเดือน</th>                      
-                          <!-- {{row[0].column6}} -->
-                          <th>ปริมาณจากการตรวจสอบ</th>
-                          <th>ปริมาณจ่ายสินค้าสำเร็จรูป </th>
-                          <th>ผลต่าง</th>
-                      </tr>
-                  </thead>
-              </table>
-          </div>
-          <br>
-          <div class="ui center aligned grid">
-              <div class="six wide column">
-                  <button class="ui mini primary button" (click)="saveTable()" type="button">
-          <i class="print icon"></i>
-         บันทึกข้อมูล
-        </button>
-                  <button class="ui mini button" (click)="clearAll()" type="reset">
-          <i class="refresh icon"></i>
-          ล้างข้อมูล
-        </button>
-              </div>
-          </div>
-      </div>
+        <div class="ui segment" id="showData">
+            <div class="ui grid center aligned">
+                <div class="sixteen wide column">
+                    {{firstDataList.companyName}}
+                    <br> กระดาษทำการรับวัตถุดิบ
+                    <br> เดือน {{startDate}} - {{endDate}}
+                </div>
+            </div>
+            <br>
+            <div style="overflow-x: scroll;">
+                <table class="ui small celled table striped selectable" style="width: 120%;" id="showDt">
+                    <thead>
+                        <tr style="text-align: center;">
+                            <th>ลำดับที่</th>
+                            <th>รายการ</th>
+                            <th>ปริมาณจ่ายสิค้าสำเร็จรูปในใบกำกับภาษี
+                            </th>
+                            <th></th>
+                            <th>ปริมาณจากงบเดือน</th>
+                            <!-- {{row[0].column6}} -->
+                            <th>ปริมาณจากการตรวจสอบ</th>
+                            <th>ปริมาณจ่ายสินค้าสำเร็จรูป </th>
+                            <th>ผลต่าง</th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+            <br>
+            <div class="ui center aligned grid">
+                <div class="six wide column">
+                    <button class="ui mini primary button" (click)="saveTable()" type="button">
+                        <i class="print icon"></i>
+                        บันทึกข้อมูล
+                    </button>
+                    <button class="ui mini button" (click)="clearAll()" type="reset">
+                        <i class="refresh icon"></i>
+                        ล้างข้อมูล
+                    </button>
+                </div>
+            </div>
+        </div>
 
-      <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-          <span>อัพโหลด Template ข้อมูลสำหรับการรับวัตถุดิบ</span>
-      </div>
+        <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+            <span>อัพโหลด Template ข้อมูลสำหรับการรับวัตถุดิบ</span>
+        </div>
 
-      <form id="upload-form" ngNativeValidate (submit)="onUpload($event)">
-          <div class="ui attached segment">
-              <div class="ui form">
-                  <div class="inline fields">
-                      <div class="eight wide field ">
-                          <label class="custom-label-w-25">เลือกไฟล์ Template ข้อมูล</label>
-                          <input type="file" name="fileExel" id="fileExel" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" (change)="onChangeUpload($event)" required>
-                      </div>
-                  </div>
-              </div>
+        <form id="upload-form" ngNativeValidate (submit)="onUpload($event)">
+            <div class="ui attached segment">
+                <div class="ui form">
+                    <div class="inline fields">
+                        <div class="eight wide field ">
+                            <label class="custom-label-w-25">เลือกไฟล์ Template ข้อมูล</label>
+                            <input type="file" name="fileExel" id="fileExel" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
+                                (change)="onChangeUpload($event)" required>
+                        </div>
+                    </div>
+                </div>
 
-              <div class="ui center aligned grid">
-                  <div class="four wide column">
-                      <button class="ui mini primary button" type="submit">
-                          <i class="upload icon"></i>
-                          อัพโหลด
-                      </button>
-                      <button class="ui mini button" type="reset">
-                          <i class="trash outline icon"></i>
-                          ลบไฟล์
-                      </button>
-                  </div>
-              </div>
-          </div>
-      </form>
+                <div class="ui center aligned grid">
+                    <div class="four wide column">
+                        <button class="ui mini primary button" type="submit">
+                            <i class="upload icon"></i>
+                            อัพโหลด
+                        </button>
+                        <button class="ui mini button" type="reset">
+                            <i class="trash outline icon"></i>
+                            ลบไฟล์
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </form>
 
-      <br>
-      <div class="ui grid center aligned">
-          <div class="sixteen wide column">
-              <button class="ui mini button" routerLink="/select-form/สินค้า/สินค้าน้ำมันและผลิตภัณฑ์น้ำมัน">
-        <i class="arrow left icon"></i>
-        ย้อนกลับ
-      </button>
-          </div>
-      </div>
-  </div>
+        <br>
+        <div class="ui grid center aligned">
+            <div class="sixteen wide column">
+                <button class="ui mini button" routerLink="/select-form/สินค้า/สินค้าน้ำมันและผลิตภัณฑ์น้ำมัน">
+                    <i class="arrow left icon"></i>
+                    ย้อนกลับ
+                </button>
+            </div>
+        </div>
+    </div>
 </div>
