--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-6/ope04-6-1/ope04-6-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-6/ope04-6-1/ope04-6-1.component.html
@@ -5,7 +5,7 @@
     <h2 class="ui header">ผลการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02) </h2>
 
     <div class="ui top attached header segment" style="background: #1e83db;color: white">
-      <span>เงื่อนไขการค้นหา</span>
+      <span>ระบุรายละเอียดกระดาษทำการ</span>
     </div>
     <div class="ui attached segment">
       <table id="dataTable" class="ui small celled table striped selectable nowrap" style="width: 100%">
