updated export epa

--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -278,12 +278,14 @@
                 <div class="menu">
                     <a class="item " [routerLink]="['/epa02/1']">
                         ค้นหาข้อมูลผลการตรวจส่งออกสินค้า ณ โรงอุตสาหกรรม หรือคลังสินค้า</a>
-                    <a class="item " [routerLink]="['/epa02/2']">
+                    <!-- <a class="item " [routerLink]="['/epa02/2']">
                         บันทึกผลการตรวจส่งออกสินค้า ณ ด่านส่งออกสินค้า</a>
                     <a class="item " [routerLink]="['/epa02/3']">
                         รายงานผลการตรวจส่งออกสินค้า ณ ด่านส่งออกสินค้า</a>
                     <a class="item " [routerLink]="['/epa02/4']">
-                        สรุปผลการตรวจส่งออก ณ ด่านส่งออกสินค้า</a>
+                        สรุปผลการตรวจส่งออก ณ ด่านส่งออกสินค้า</a> -->
+                    <a class="item " [routerLink]="['/epa02/4']">
+                        รายงานผลการตรวจส่งออกสินค้า ณ ด่านส่งออกสินค้า</a>
                 </div>
             </div>
             <!-- <div class="ui dropdown item ">
