--- a/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa02/epa02-3/epa02-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa02/epa02-3/epa02-3.component.html
@@ -1,3 +1,308 @@
-<p>
-  epa02-3 works!
-</p>
+<div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+  <span>จัดการข้อมูลต้นทาง</span>
+</div>
+
+<div class="ui attached segment">
+  <div class="ui grid center aligned">
+    <div class="sixteen wide column">
+      <h3>บันทึกผลการตรวจส่งออกสินค้า ณ ด่านส่งออกสินค้า</h3>
+    </div>
+  </div>
+  <br><br>
+
+  <div class="ui form">
+    <div class="ui grid">
+      <!-- column 1 -->
+      <div class="eight wide field" style="text-align: center;">
+        <label>ข้อมูลการตามแบบคำขอยกเว้นหรือคืนภาษี (แบบเลขที่) :</label>
+      </div>
+      <!-- column 2 -->
+      <div class="eight wide field" style="text-align: center;">
+        <label>ข้อมูลการนำสินค้าออกจากโรงอุตสาหกรรม :</label>
+      </div>
+    </div>
+    <hr><br>
+
+    <div class="inline fields">
+      <!-- column 1 -->
+      <div class="three wide field">
+        <p>ชื่อผุ้ส่งออก :</p>
+      </div>
+      <div class="four wide field">
+        <label></label>
+      </div>
+      <div class="two wide field"></div>
+      <!-- column 2 -->
+      <div class="three wide field">
+        <p>ชื่อผุ้ส่งออก :</p>
+      </div>
+      <div class="four wide field">
+        <input type="text">
+      </div>
+    </div>
+
+    <div class="inline fields">
+      <!-- column 1 -->
+      <div class="three wide field">
+        <p>สำนักงานสรรพสามิตต้นทาง :</p>
+      </div>
+      <div class="four wide field">
+        <label></label>
+      </div>
+      <div class="two wide field"></div>
+      <!-- column 2 -->
+      <div class="three wide field">
+        <p>สำนักงานสรรพสามิตต้นทาง :</p>
+      </div>
+      <div class="four wide field">
+        <input type="text">
+      </div>
+    </div>
+
+    <div class="inline fields">
+      <!-- column 1 -->
+      <div class="three wide field">
+        <p>ด่านส่งออกสินค้าปลายทาง :</p>
+      </div>
+      <div class="four wide field">
+        <label>สำนักงานสรรพสามิต</label>
+      </div>
+      <div class="two wide field"></div>
+      <!-- column 2 -->
+      <div class="three wide field">
+        <p>ด่านส่งออกสินค้าปลายทาง :</p>
+      </div>
+      <div class="four wide field">
+        <input type="text">
+      </div>
+    </div>
+
+    <div class="inline fields">
+      <!-- column 1 -->
+      <div class="three wide field">
+        <p>สำนักงานสรรพสามิตปลายทาง :</p>
+      </div>
+      <div class="four wide field">
+        <label>สำนักงานสรรพสามิต</label>
+      </div>
+      <div class="two wide field"></div>
+      <!-- column 2 -->
+      <div class="three wide field">
+        <p>สำนักงานสรรพสามิตปลายทาง :</p>
+      </div>
+      <div class="four wide field">
+        <input type="text">
+      </div>
+    </div>
+
+    <div class="inline fields">
+      <!-- column 1 -->
+      <div class="three wide field">
+        <p>วันที่นำสินค้าออก :</p>
+      </div>
+      <div class="four wide field">
+        <label></label>
+      </div>
+      <div class="two wide field"></div>
+      <!-- column 2 -->
+      <div class="three wide field">
+        <p>วันที่นำสินค้าออก :</p>
+      </div>
+      <div class="four wide field">
+        <input type="text">
+      </div>
+    </div>
+
+    <div class="inline fields">
+      <!-- column 1 -->
+      <div class="three wide field">
+        <p>ชนิดของสินค้า :</p>
+      </div>
+      <div class="four wide field">
+        <label></label>
+      </div>
+      <div class="two wide field"></div>
+      <!-- column 2 -->
+      <div class="three wide field">
+        <p>ชนิดของสินค้า :</p>
+      </div>
+      <div class="four wide field">
+        <input type="text">
+      </div>
+    </div>
+
+    <div class="inline fields">
+      <!-- column 1 -->
+      <div class="three wide field">
+        <p>ปริมาณของสินค้า :</p>
+      </div>
+      <div class="four wide field">
+        <label></label>
+      </div>
+      <div class="two wide field"></div>
+      <!-- column 2 -->
+      <div class="three wide field">
+        <p>ปริมาณของสินค้า :</p>
+      </div>
+      <div class="four wide field">
+        <input type="text">
+      </div>
+    </div>
+
+    <div class="inline fields">
+      <!-- column 1 -->
+      <div class="three wide field">
+        <p>ชื่อหรือเลขทะเบียนพาหนะ :</p>
+      </div>
+      <div class="four wide field">
+        <label>-</label>
+      </div>
+      <div class="two wide field"></div>
+      <!-- column 2 -->
+      <div class="three wide field">
+        <p>ชื่อหรือเลขทะเบียนพาหนะ :</p>
+      </div>
+      <div class="four wide field">
+        <input type="text">
+      </div>
+    </div>
+
+    <div class="inline fields">
+      <!-- column 1 -->
+      <div class="three wide field">
+        <p>เส้นทางการขนส่ง :</p>
+      </div>
+      <div class="four wide field">
+        <label>-</label>
+      </div>
+      <div class="two wide field"></div>
+      <!-- column 2 -->
+      <div class="three wide field">
+        <p>เส้นทางการขนส่ง :</p>
+      </div>
+      <div class="four wide field">
+        <input type="text">
+      </div>
+    </div>
+
+    <div class="inline fields">
+      <!-- column 1 -->
+      <div class="three wide field">
+      </div>
+      <div class="four wide field">
+      </div>
+      <div class="two wide field"></div>
+      <!-- column 2 -->
+      <div class="three wide field">
+        <p>ค่า Marker :</p>
+      </div>
+      <div class="four wide field">
+        <input type="text">
+      </div>
+    </div>
+    <hr>
+    <br>
+
+    <div class="ui grid">
+      <!-- column 1 -->
+      <div class="eight wide field" style="text-align: center;">
+        <label>จำนวนและหมายเลขดวงตรากรมสรรพสามิต :</label>
+      </div>
+      <!-- column 2 -->
+      <div class="eight wide field" style="text-align: center;">
+        <label>จำนวนและหมายเลขดวงตรากรมสรรพสามิต :</label>
+      </div>
+    </div>
+
+    <div class="ui grid">
+      <div class="two column row">
+        <!-- column 1 Tax Stamp -->
+        <div class="column">
+
+          <div class="inline fields" *ngFor="let item of taxStampNo; let i = index">
+            <div class="two wide field">
+              <p>ดวงที่ {{i+1}}</p>
+            </div>
+            <div class="eight wide field">
+              <input type="text" [(ngModel)]="datas.stampName">
+            </div>
+            <div class="four wide field">
+              <button class="ui mini green button" (click)="addTaxField()">
+                <i class="plus icon"></i>
+                เพิ่ม
+              </button>
+              <button class="ui mini red button" (click)="delTaxField(i)">
+                ลบ
+              </button>
+            </div>
+          </div>
+
+        </div>
+        <!-- column 2 Factory Stamp -->
+        <div class="column">
+
+          <div class="inline fields" *ngFor="let item of factoryStampNo; let i = index">
+            <div class="two wide field"></div>
+            <div class="two wide field">
+              <p>ดวงที่ {{i+1}}</p>
+            </div>
+            <div class="eight wide field">
+              <input type="text" [(ngModel)]="saveDatas.stampName">
+            </div>
+            <div class="four wide field">
+              <button class="ui mini green button" (click)="addFactoryField()">
+                <i class="plus icon"></i>
+                เพิ่ม
+              </button>
+              <button class="ui mini red button" (click)="delFactoryField(i)">
+                ลบ
+              </button>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <hr>
+    <br>
+
+    <!-- Radio Box -->
+    <div class="ui grid center aligned">
+      <div class="inline fields">
+        <label>ผลการตรวจ:</label>
+        <div class="field">
+          <div class="ui radio checkbox">
+            <input type="radio" name="result" [(ngModel)]="datas.resultDtl" value="1">
+            <label>ผ่าน</label>
+          </div>
+        </div>
+        <div class="field">
+          <div class="ui radio checkbox">
+            <input type="radio" name="result" [(ngModel)]="datas.resultDtl" value="0">
+            <label>ไม่ผ่าน</label>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Comment Box -->
+    <div class="ui grid center aligned">
+      <label>หมายเหตุ</label>
+      <div class="fields">
+        <textarea rows="5" cols="100" [(ngModel)]="datas.comment1Dtl"></textarea>
+      </div>
+    </div>
+    <br>
+    <div class="actions" style="text-align: center;">
+      <div class="ui primary button" (click)="onClickSave()">
+        <i class="save icon"></i>
+        บันทึกข้อมูลการตรวจ
+      </div>
+      <div class="ui icon deny button" (click)="onClickCancel()">
+        <i class="close icon"></i>
+        ยกเลิกการบันทึกข้อมูล
+      </div>
+    </div>
+
+  </div>
+</div>
