--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -208,6 +208,9 @@
                     <a class="item " *ngIf="authService.renderByPage('select-form/บริการ/สินค้าน้ำมันและผลิตภัณฑ์น้ำมัน')"
                         [routerLink]="[ '/select-form/บริการ/สินค้าน้ำมันและผลิตภัณฑ์น้ำมัน'] " routerLinkActive="active ">สร้างกระดาษทำการตรวจสอบภาษี
                     </a>
+                    <a class="item " *ngIf="authService.renderByPage('select-form/rs001')"
+                    [routerLink]="[ '/select-form/rs001'] " routerLinkActive="active ">ผลการตรวจสอบภาษี
+                </a>
                     <!-- <a class="item " routerLinkActive="active ">สรุปผลการตรวจสอบภาษี</a> -->
                 </div>
             </div>
