--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/result-select-form/result-select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/result-select-form/result-select-form.component.html
@@ -1,7 +1,7 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <div class="ui grid">
     <div class="sixteen wide column">
-        <h2 class="ui header">สร้างกระดาษทำการ</h2>
+        <h2 class="ui header">ผลการตรวจสอบภาษี</h2>
         <div class="ui segment">
             <div class="ui grid">
                 <div class="sixteen wide column">
@@ -15,7 +15,7 @@
                                         <i class="file outline icon"></i>
                                         <div class="content">
                                             <div class="header">
-                                                <a href="javascript:;" routerLink="/ope04/1">กระดาษทำการรับวัตถุดิบ </a>
+                                                <a href="javascript:;" routerLink="/ope04/1-1">กระดาษทำการรับวัตถุดิบ </a>
                                             </div>
                                         </div>
                                     </div>
@@ -37,14 +37,6 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <!-- <div class="item">
-                                        <i class="file outline icon"></i>
-                                        <div class="content">
-                                            <div class="header">
-                                                <a href="javascript:;" routerLink="/ope04/4/1">กระดาษทำการหาความสัมพันธ์การเบิกใช้วัตถุดิบกับการรับสินค้าสำเร็จรูป</a>
-                                            </div>
-                                        </div>
-                                    </div> -->
                                     <div class="item">
                                         <i class="file outline icon"></i>
                                         <div class="content">
@@ -67,9 +59,8 @@
                                         <i class="file outline icon"></i>
                                         <div class="content">
                                             <div class="header">
-                                                <a href="javascript:;" routerLink="/ope04/6">
-                                                    กระดาษทำการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต
-                                                    (ภส.05 - 02) </a>
+                                                <a routerLink="/ope04/6-2" href="javascript:;">ผลการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต
+                                                    (ภส.05 - 02)</a>
                                             </div>
                                         </div>
                                     </div>
@@ -77,19 +68,10 @@
                                         <i class="file outline icon"></i>
                                         <div class="content">
                                             <div class="header">
-                                                <a routerLink="/ope04/6-2" href="javascript:;">ผลการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต
-                                                    (ภส.05 - 02)</a>
-                                            </div>
-                                        </div>
-                                    </div> -->
-                                    <div class="item">
-                                        <i class="file outline icon"></i>
-                                        <div class="content">
-                                            <div class="header">
                                                 <a href="javascript:;" routerLink="/ope04/8">กระดาษทำการตรวจสอบด้านราคา</a>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
