--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-1/ope04-1-1/ope04-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-1/ope04-1-1/ope04-1-1.component.html
@@ -2,7 +2,7 @@
 
 <div class="ui grid">
   <div class="sixteen wide column">
-    <h2 class="ui header">ผลการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02) </h2>
+    <h2 class="ui header">ผลการตรวจสอบกระดาษทำการรับวัตถุดิบ</h2>
 
     <div class="ui top attached header segment" style="background: #1e83db;color: white">
       <span>ระบุรายละเอียดกระดาษทำการ</span>
