--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-8/ope04-8.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-8/ope04-8.component.html
@@ -147,5 +147,13 @@
         </div>
       </form>
     </div>
+    <br>
+    <div class="ui grid center aligned">
+        <div class="sixteen wide column">
+            <button class="ui mini button" routerLink="/select-form/สินค้า/สินค้าน้ำมันและผลิตภัณฑ์น้ำมัน">
+                <i class="reply icon"></i> ย้อนกลับ
+            </button>
+        </div>
+    </div>
   </div>
 </div>
