--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/result-select-form/result-select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/result-select-form/result-select-form.component.html
@@ -23,7 +23,7 @@
                                         <i class="file outline icon"></i>
                                         <div class="content">
                                             <div class="header">
-                                                <a href="javascript:;" routerLink="/ope04/2">กระดาษทำการจ่ายวัตถุดิบ
+                                                <a href="javascript:;" routerLink="/ope04/2-1">กระดาษทำการจ่ายวัตถุดิบ
                                                 </a>
                                             </div>
                                         </div>
@@ -32,7 +32,7 @@
                                         <i class="file outline icon"></i>
                                         <div class="content">
                                             <div class="header">
-                                                <a href="javascript:;" routerLink="/ope04/3">กระดาษทำการตรวจนับวัตถุดิบคงเหลือ
+                                                <a href="javascript:;" routerLink="/ope04/3-1">กระดาษทำการตรวจนับวัตถุดิบคงเหลือ
                                                 </a>
                                             </div>
                                         </div>
