--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-3/int07-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-3/int07-3.component.html
@@ -10,19 +10,19 @@
   <div class="{{processList==1?  'disabled': processList==2?  'active': 'completed'}} step">
     <div class="content">
       <div class="title">บัญชีแยกประเภท</div>
-      <div class="description">รอดำเนินการ</div>
+      <div class="description">{{processList==1?  'รอดำเนินการ': processList==2?  'กำลังดำเนินการ': 'อัปโหลดสำเร็จ'}}</div>
     </div>
   </div>
-  <div class=" {{processList==1?  'disabled': processList==2?  'active': 'completed'}} step">
+  <div class=" {{processList==1?  'disabled': processList==2?  'active': processList==3?  'active': 'completed'}} step">
     <div class="content">
       <div class="title">ตรวจสอบค่าใช้จ่าย</div>
-      <div class="description">รอดำเนินการ</div>
+      <div class="description">{{processList==1?  'รอดำเนินการ': processList==2?  'รอดำเนินการ': processList==3?  'รอดำเนินการ': 'ดำเนินการสำเร็จ'}}</div>
     </div>
   </div>
 </div>
 
 
-<div class="ui grid">
+<div class="ui grid" id="tbUpload">
   <div class="sixteen wide column">
       <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
           <span>อัพโหลดไฟล์ตรวจสอบงบทดลองกระทบยอด เดบิต เครดิต บัญชีแยกประเภท</span>
@@ -44,7 +44,7 @@
                   <button class="ui mini yellow button" type="submit"><i class="upload icon"></i> อัปโหลด</button>
                   <button class="ui mini gray button" type="reset" (click)="clearData()"><i class="sync icon"></i> ล้างข้อมูล</button>
                   <button class="ui mini primary button"  type="button" [disabled]="dataTrialBalanceSheet.length==0" (click)="nextData()" *ngIf="processList === 1 "><i class="share icon"></i>ถัดไป</button>
-                  <button class="ui mini green button"  (click)="checkData()" *ngIf="processList === 2 "><i class="clipboard check icon"></i>ตรวจสอบข้อมูล</button>
+                  <button class="ui mini green button"  (click)="checkData()" [disabled]="dataLedgerSheet.length==0" *ngIf="processList === 3 "><i class="clipboard check icon"></i>ตรวจสอบข้อมูล</button>
             </div><br>
           </form>
  
@@ -53,40 +53,16 @@
   </div>
 </div>
 
-<!--table step 1-->
-<div class="ui grid" *ngIf="processList === 1 ">
-  <div class="sixteen wide column">
-      <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-          <span>ข้อมูลการอัปโหลด</span>
-      </div>
-      <!-- form upload -->
-      <div class="ui attached center segment {{loading ? 'loading' : ''}} ">
-          <table id="dataTable" class="ui small celled table nowrap striped selectable" style="width: 100%">
-              <thead>
-                  <tr>
-                    <th style="text-align: center !important">เลขที่บัญชีแยกประเภท</th>
-                    <th style="text-align: center !important">ชื่อบัญชีแยกประเภท</th>
-                    <th style="text-align: center !important">ยอดยกมา</th>
-                    <th style="text-align: center !important">เดบิต</th>
-                    <th style="text-align: center !important">เครดิต</th>
-                    <th style="text-align: center !important">ยอดยกไป</th>
-                  </tr>
-              </thead>
-          </table>
-      </div>
-  </div>
-</div>
-<!-- table -->
 
-<!--table step 2-->
-<div class="ui grid" *ngIf="processList === 2 ">
+<!--table step 1-->
+<div class="ui grid" id="tb1">
     <div class="sixteen wide column">
         <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
             <span>ข้อมูลการอัปโหลด</span>
         </div>
         <!-- form upload -->
         <div class="ui attached center segment {{loading ? 'loading' : ''}} ">
-            <table id="dataTable" class="ui small celled table nowrap striped selectable" style="width: 100%">
+            <table id="dataTable1" class="ui small celled table nowrap striped selectable" style="width: 100%">
                 <thead>
                     <tr>
                       <th style="text-align: center !important">เลขที่บัญชีแยกประเภท</th>
@@ -98,6 +74,70 @@
                     </tr>
                 </thead>
             </table>
+        </div>
+    </div>
+  </div>
+  <!-- table -->
+
+  <!--table step 2-->
+<div class="ui grid" id="tb2">
+    <div class="sixteen wide column">
+        <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+            <span>ข้อมูลการอัปโหลด</span>
+        </div>
+        <!-- form upload -->
+        <div class="ui attached center segment {{loading ? 'loading' : ''}} ">
+            <table id="dataTable2" class="ui small celled table nowrap striped selectable" style="width: 100%">
+                <thead >
+                    <tr>
+                      <th style="text-align: center !important">เลขที่บัญชีแยกประเภท</th>
+                      <th style="text-align: center !important">ชื่อบัญชีแยกประเภท</th>
+                      <th style="text-align: center !important">เดบิต</th>
+                      <th style="text-align: center !important">เครดิต</th>
+                      <th style="text-align: center !important">ยอดยกไป</th>
+                    </tr>
+                </thead>
+            </table>
+        </div>
+    </div>
+  </div>
+  <!-- table -->
+
+    <!--table step 3-->
+<div class="ui grid" id="tb3">
+    <div class="sixteen wide column">
+        <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+            <span>ตรวจสอบงบทดลองกระทบยอด เดบิต เครดิต บัญชีแยกประเภท</span>
+        </div>
+        <!-- form upload -->
+        <div class="ui attached center segment {{loading ? 'loading' : ''}} ">
+            <table id="dataTable3" class="ui small celled table nowrap striped selectable" style="width: 100%">
+                <thead >
+                    <tr>
+                        <th rowspan="2" style="text-align: center !important">เลขที่บัญชีแยกประเภท</th>
+                        <th rowspan="2" style="text-align: center !important">ชื่อบัญชีแยกประเภท</th>
+                        <th rowspan="2" style="text-align: center !important">ยอดยกมา</th>
+                        <th rowspan="2" style="text-align: center !important">เดบิต</th>
+                        <th rowspan="2" style="text-align: center !important">เครดิต</th>
+                        <th rowspan="2" style="text-align: center !important">ยอดยกไป</th>
+                        <th colspan="3"  style="text-align: center !important">แยกประเภท</th>
+                        <th rowspan="2" style="text-align: center !important">ผลต่าง</th>
+                    </tr>
+                    <tr>
+                        <th style="text-align: center !important; border-left: 1px solid rgba(34,36,38,.1) !important">เดบิต</th>
+                        <th style="text-align: center !important">เครดิต</th>
+                        <th style="text-align: center !important">ยอดยกไป</th>
+                    </tr>
+                </thead>
+            </table>
+            <div class="ui six column centered grid">
+            <div class="column">
+                <button class="ui mini yellow button"  (click)="export()">
+                <i class="print icon"></i>
+                ส่งออก
+                </button>
+            </div>
+            </div>
         </div>
     </div>
   </div>
